packages/bui/src/components/scrollbar/style.scss
// reference https://github.com/ElemeFE/element/blob/dev/packages/theme-chalk/src/scrollbar.scss

.scrollbar {
  overflow: hidden;
  position: relative;

  &:hover,
  &:active,
  &:focus {
    > .scrollbar__bar {
      opacity: 1;
      transition: opacity 340ms ease-out;
    }
  }

  &__wrap {
    overflow: auto;
    height: 100%;

    &.hidden-default {
      scrollbar-width: none;
      &::-webkit-scrollbar {
        width: 0;
        height: 0;
      }
    }
  }

  &__view {
    height: 100%;
  }

  &__thumb {
    position: relative;
    display: block;
    width: 0;
    height: 0;
    cursor: pointer;
    border-radius: inherit;
    background-color: #909399; // opacity 0.3
    transition: .3s background-color;

    &:hover {
      background-color: #909399; // opacity 0.5
    }
  }

  &__bar {
    position: absolute;
    right: 2px;
    bottom: 2px;
    z-index: 1;
    border-radius: 4px;
    opacity: 0;
    transition: opacity 120ms ease-out;

    &.is-vertical {
      width: 6px;
      top: 2px;

      > div {
        width: 100%;
      }
    }

    &.is-horizontal {
      height: 6px;
      left: 2px;

      > div {
        height: 100%;
      }
    }
  }
}

